--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CarouselCSS</title>
-    <link rel="stylesheet" href="./carousel.css">
+    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./common/components/buttons.css">
+    <link rel="stylesheet" href="./common/components/slide.css">
+    <link rel="stylesheet" href="./common/components/options.css">
     <style>
         /* Custom style, not part of the framework */
         html, body{
